# test-primary

./: .gitignore  README.md  RUNBOOK.md  ai-review-prompt.md  overview.md  start.bat  start.ps1  stop.bat  stop.ps1  test-log.py
.claude/: settings.local.json
.kiro/skills/: advanced-chart-patterns.md  change-of-character.md  divergence-patterns.md  fair-value-gap.md  fibonacci-retracement.md  mean-reversion-trading.md  order-blocks.md  price-action-trading.md  trading-confluence-framework.md
database/: trade-v1.sql
document/design/: 01-system-overview.md  02-service-documentation.md  03-data-flow-diagrams.md  04-database-design.md  05-api-documentation.md  06-object-model.md  07-scoring-algorithm.md  08-deployment-operations.md  09-limitations-decisions.md  10-glossary-reference.md
document/prompts/: system-document.prompt.md  system-documentation-prompt.md
project/design/: AI_Trade_Tool_Blueprint.md  BACKEND_ARCHITECTURE.md  SETUP_BACKEND.md  design.md  run.md
project/docs/: advanced-chart-patterns.md  change-of-character.md  divergence-patterns.md  fair-value-gap.md  fibonacci-retracement.md  mean-reversion-trading.md  (+1 more)
tasks/: system-review.md
workspace/trading-core/: pyproject.toml
workspace/trading-core/trading_core/: __init__.py
workspace/trading-core/trading_core/cache/: __init__.py  keys.py  redis_client.py
workspace/trading-core/trading_core/db/: __init__.py  connection.py
workspace/trading-core/trading_core/exchange/: __init__.py  client.py  interface.py
workspace/trading-core/trading_core/utils/: __init__.py  logging.py  retry.py
(+265 files in other folders)
