[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-core"
version = "0.1.0"
description = "Shared infrastructure library for the crypto trading system"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["trading_core*"]

[tool.setuptools.package-dir]
"" = "."
